--- a/templates/home.html
+++ b/templates/home.html
@@ -12,13 +12,13 @@
 
 <body>
   <nav class="purple darken-4 accent-3" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">NIT</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="https://github.com/Vaibhav2codes/Medical_Insurance_cost_prediction">Github Link</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="https://github.com/Vaibhav2codes/Medical_Insurance_cost_prediction">Github Link</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -99,11 +99,11 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Project Objective</h5>
+          <p class="grey-text text-lighten-4">The objective is to create a model that can help insurance companies and healthcare providers determine insurance premiums for individuals and also help individuals to plan their healthcare expenses.</p>
         </div>
         
-        <div class="col l3 s12">
+        <!-- <div class="col l3 s12">
           <h5 class="white-text">Settings</h5>
           <ul>
             <li><a class="white-text" href="#!">Link 1</a></li>
@@ -111,12 +111,12 @@
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
           </ul>
-        </div> 
+        </div>  -->
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">LinkedIn</a></li>
-            <li><a class="white-text" href="#!">GitHub</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/vaibhav-singh-2b259b237/">LinkedIn</a></li>
+            <li><a class="white-text" href="https://github.com/Vaibhav2codes">GitHub</a></li>
           </ul>
         </div>
       </div>
