--- a/templates/op.html
+++ b/templates/op.html
@@ -9,7 +9,7 @@
 
     <body>
         <nav class="blue darken-4 accent-3">
-            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">NIT</a>
 
         </nav>
         <div class="section no-pad-bot" id="index-banner">
